Issue #759 Corretto algoritmo per decidere quando una pendenza passa in stato riconciliata. Eliminate 6k segnalazioni sonar dal progetto orm.